# Mousedroid

./: LICENSE  README.md
client/app/: build.gradle
client/app/src/main/: AndroidManifest.xml
client/app/src/main/res/color/: drawer_item_background.xml  drawer_item_tint.xml
client/app/src/main/res/drawable/: baseline_bluetooth_24.xml  circle_green.xml  ic_arrow_drop_up.xml  ic_disconnect.xml  ic_forward_10.xml  ic_fullscreen.xml  ic_fullscreen_exit.xml  ic_language.xml  ic_menu.xml  ic_pause.xml  ic_play.xml  ic_play_pause.xml  ic_replay_10.xml  ic_skip_next.xml  ic_skip_previos.xml  ic_touchpad.xml  ic_volume_down.xml  ic_volume_off.xml  ic_volume_up.xml  item_shape.xml  rounded_control.xml  touchpad_bg.xml
client/app/src/main/res/layout/: activity_main.xml  connection_disconnected_fragment.xml  connection_failed_fragment.xml  devicelistitem.xml  fragment_device_list.xml  fragment_input.xml  fragment_main.xml  fragment_numpad.xml  fragment_touchpad.xml  loading_fragment.xml  nav_header_mousedroid.xml
client/app/src/main/res/menu/: input_modes_menu.xml
client/app/src/main/res/navigation/: navigation.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
server/: .gitignore  CMakeLists.txt  README.md  install.bat  install.sh  release.bat  release.sh
server/include/: Logger.hpp  adb.hpp  wxApplication.hpp  wxDeviceList.hpp
server/include/input/: InputManager.hpp  LinuxInputManager.hpp  WindowsInputManager.hpp  input.h
server/include/net/: Connection.hpp  Device.hpp  Server.hpp
server/res/: resource.rc
server/src/: Logger.cpp  SettingsManager.cpp  adb.hpp  logger.cpp  logger.h  settingsmanager.cpp  settingsmanager.h  wxApplication.cpp  wxDeviceList.cpp  wxMain.cpp  wxapplication.cpp  wxapplication.h
server/src/gui/: taskbar.cpp  taskbar.h  wxdevicelist.cpp  wxdevicelist.h  wxmain.cpp  wxmain.h
server/src/input/: LinuxInputManager.cpp  WindowsInputManager.cpp  input.h  inputmanager.hpp
server/src/input/linux/: keymap.h  linuxinputmanager.cpp  linuxinputmanager.h
server/src/input/win32/: keymap.h  windowsinputmanager.cpp  windowsinputmanager.h
server/src/net/: Connection.cpp  Server.cpp  connection.cpp  connection.h  server.cpp  server.h
(+65 files in other folders)
